Bug 39922 - [4.5 regression] Revision 146817 caused many regressions on trunk
Summary: [4.5 regression] Revision 146817 caused many regressions on trunk
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: ---
Assignee: Michael Matz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-26 23:12 UTC by H.J. Lu
Modified: 2009-04-28 12:38 UTC (History)
2 users (show)

See Also:
Host: i686-pc-linux-gnu
Target: i686-pc-linux-gnu
Build:
Known to work:
Known to fail:
Last reconfirmed: 2009-04-27 11:55:50


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2009-04-26 23:12:12 UTC
On Linux/ia32, revision 146817 gave

FAIL: gcc.c-torture/execute/960416-1.c execution,  -O2 
FAIL: gcc.c-torture/execute/960416-1.c execution,  -O3 -fomit-frame-pointer 
FAIL: gcc.c-torture/execute/960416-1.c execution,  -O3 -g 
FAIL: libgomp.c++/loop-12.C  -O2  execution test
FAIL: libgomp.c++/loop-12.C  -O3 -fomit-frame-pointer  execution test
FAIL: libgomp.c++/loop-12.C  -O3 -fomit-frame-pointer -funroll-all-loops -finline-functions  execution test
FAIL: libgomp.c++/loop-12.C  -O3 -fomit-frame-pointer -funroll-loops  execution test
FAIL: libgomp.c++/loop-12.C  -O3 -g  execution test
FAIL: libgomp.c++/loop-12.C  -Os  execution test
FAIL: libgomp.c++/loop-9.C  -O2  execution test
FAIL: libgomp.c++/loop-9.C  -O3 -fomit-frame-pointer  execution test
FAIL: libgomp.c++/loop-9.C  -O3 -fomit-frame-pointer -funroll-all-loops -finline-functions  execution test
FAIL: libgomp.c++/loop-9.C  -O3 -fomit-frame-pointer -funroll-loops  execution test
FAIL: libgomp.c++/loop-9.C  -O3 -g  execution test
FAIL: libgomp.c++/loop-9.C  -Os  execution test
FAIL: libgomp.c/loop-12.c execution test
FAIL: libgomp.c/loop-6.c execution test

Revision 146805 is OK.
Comment 1 H.J. Lu 2009-04-27 02:37:21 UTC
Revision 146817:

http://gcc.gnu.org/ml/gcc-cvs/2009-04/msg01459.html

is the cause.
Comment 2 H.J. Lu 2009-04-27 03:01:49 UTC
This may be 32bit host related since I didn't see it on Linux/x86-64 with
-m32.
Comment 3 Michael Matz 2009-04-27 11:55:50 UTC
I have a patch.
Comment 4 Michael Matz 2009-04-28 12:23:01 UTC
Subject: Bug 39922

Author: matz
Date: Tue Apr 28 12:22:47 2009
New Revision: 146889

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=146889
Log:
        PR middle-end/39922
        * tree-outof-ssa.c (insert_value_copy_on_edge): Don't convert
        constants.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/tree-outof-ssa.c

Comment 5 Michael Matz 2009-04-28 12:38:54 UTC
Fixed.