re PR middle-end/39922 (Revision 146817 caused many regressions on trunk)

PR middle-end/39922
        * tree-outof-ssa.c (insert_value_copy_on_edge): Don't convert
        constants.

From-SVN: r146889